--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,18 @@ base {
 }
 
 repositories {
+	maven {
+		name = 'Hypixel'
+		url = 'https://repo.hypixel.net/repository/Hypixel/'
+	}
+	maven {
+		name = 'Gson'
+		url = 'https://mvnrepository.com/artifact/com.google.code.gson/gson'
+	}
+	maven {
+		name = 'Apache'
+		url = 'https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient'
+	}
 	// Add repositories to retrieve artifacts from in here.
 	// You should only use this when depending on other mods because
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
@@ -51,7 +63,12 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	
+
+	implementation 'net.hypixel:hypixel-api-transport-apache:4.3'
+	implementation 'com.google.code.gson:gson:2.10.1'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
+
+
 	// Uncomment the following line to enable the deprecated Fabric API modules. 
 	// These are included in the Fabric API production distribution and allow you to update your mod to the latest modules at a later more convenient time.
 
